--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,15 +12,15 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
-		<h1 class="title mb-6">Hello World!</h1>
-		<p class="mb-4">
-			Hi, I’m a theme for Astro, an example of how you can use this starter to create a personal
-			blog. If you want to know more about how you can customise me, add more posts, and make it
-			your own, click on one of the social links which will take you to my repo.
+		<h1 class="title mb-6">Hello there!</h1>
+		<p class="mb-4 text-lg">
+			I’m Li Yang, a penultimate year <b>Data Science</b> undergraduate at the <b>National University of Singapore</b>. 
+			I enjoy building data-driven applications of all kinds using the latest and greatest frameworks. My recent interests are in
+			<code class="text-sm">NLP</code>, <code class="text-sm">GIS</code> and <code class="text-sm">web development</code>!
 		</p>
 		<SocialList />
 	</section>
-	<section aria-label="Blog post list" class="mt-16">
+	<section aria-label="Blog post list" class="mt-8">
 		<h2 class="title mb-4 text-xl">Posts</h2>
 		<ul class="space-y-4 sm:space-y-2">
 			{
@@ -32,7 +32,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 			}
 		</ul>
 	</section>
-	<section class="mt-16">
+	<!-- <section class="mt-16">
 		<h2 class="title mb-4 text-xl">Technologies</h2>
 		<ul class="space-y-4 sm:space-y-2">
 			<li>
@@ -80,5 +80,5 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 				<p class="inline-block sm:mt-2">Markdown for the component era.</p>
 			</li>
 		</ul>
-	</section>
+	</section> -->
 </PageLayout>
