Update about & shorts

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -22,5 +22,8 @@ const year = new Date().getFullYear();
 		<a href="/posts" class="px-4 py-2 sm:py-0 sm:px-2 sm:hover:text-textColor sm:hover:underline"
 			>Blog</a
 		>
+		<a href="/shorts" class="px-4 py-2 sm:py-0 sm:px-2 sm:hover:text-textColor sm:hover:underline"
+			>Shorts</a
+		>
 	</nav>
 </footer>
