--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -52,32 +52,50 @@ const menuLinks = [
 		focusable="false"
 		fill="none"
 		xmlns="http://www.w3.org/2000/svg"
-		viewBox="0 0 272 480"
+		viewBox="0 0 116 175"
 		>
 			<title>Logo</title>
-			<path
-				d="M181.334 93.333v-40L226.667 80v40l-45.333-26.667ZM136.001 53.333 90.667 26.667v426.666L136.001 480V53.333Z"
-				fill="#B04304"></path>
-			<path
-				d="m136.001 119.944 45.333-26.667 45.333 26.667-45.333 26.667-45.333-26.667ZM90.667 26.667 136.001 0l45.333 26.667-45.333 26.666-45.334-26.666ZM181.334 53.277l45.333-26.666L272 53.277l-45.333 26.667-45.333-26.667ZM0 213.277l45.333-26.667 45.334 26.667-45.334 26.667L0 213.277ZM136 239.944l-45.333-26.667v53.333L136 239.944Z"
-				fill="#FF5D01"></path>
-			<path
-				d="m136 53.333 45.333-26.666v120L226.667 120V80L272 53.333V160l-90.667 53.333v240L136 480V306.667L45.334 360V240l45.333-26.667v53.334L136 240V53.333Z"
-				fill="#53C68C"></path>
-			<path d="M45.334 240 0 213.334v120L45.334 360V240Z" fill="#B04304"></path>
+			<g filter="url(#filter0_d_0_1)">
+				<path d="M58 0L70.5728 34.2037H111.259L78.3432 55.3427L90.916 89.5463L58 68.4073L25.084 89.5463L37.6568 55.3427L4.74083 34.2037H45.4272L58 0Z" fill="#31A6E8"/>
+				</g>
+				<g filter="url(#filter1_d_0_1)">
+				<path d="M74.1826 123.421L74.1094 103.353C74.1094 100.618 73.6699 98.7627 72.791 97.7861C71.1797 95.9795 68.2012 95.0762 63.8555 95.0762H52.2832C46.2285 95.0762 42.9082 96.7852 42.3223 100.203C42.1758 101.18 42.1025 102.229 42.1025 103.353L42.0293 125.325C42.0293 144.271 43.0059 156.136 44.959 160.921C45.7402 162.776 46.9609 164.803 48.6211 167H21.1553C22.7178 163.289 23.6211 160.188 23.8652 157.698C24.1582 155.208 24.4512 152.132 24.7441 148.47C25.2812 140.804 25.5498 132.039 25.5498 122.176C25.5498 112.312 25.5254 105.525 25.4766 101.814C25.4277 98.0547 25.3789 94.3926 25.3301 90.8281C24.9883 76.0332 24.5244 67.1709 23.9385 64.2412C23.3525 61.2627 22.8643 59.2607 22.4736 58.2354L21.1553 54.9395H48.6211C45.1055 58.8457 43.1523 64.1191 42.7617 70.7598C42.6152 72.7617 42.542 74.8613 42.542 77.0586C42.542 79.2559 42.7373 80.9893 43.1279 82.2588C43.5674 83.4795 44.2754 84.3828 45.252 84.9688C46.5703 85.8477 49.6709 86.2871 54.5537 86.2871H61.5117C66.4922 86.2871 69.5684 85.9209 70.7402 85.1885C72.6934 83.9189 73.6699 81.1602 73.6699 76.9121C73.6699 66.5117 71.6191 59.1875 67.5176 54.9395H94.9834C93.5186 58.1621 92.6152 61.1406 92.2734 63.875C91.9805 66.6094 91.7607 69.2461 91.6143 71.7852C91.4678 74.2754 91.3213 77.1807 91.1748 80.501C91.0283 83.8213 90.9062 87.2637 90.8086 90.8281C90.6621 99.1289 90.5889 106.648 90.5889 113.387C90.5889 140.779 91.6143 157.552 93.665 163.704C94.0068 164.729 94.4463 165.828 94.9834 167H67.5176C69.959 163.729 71.4482 160.921 71.9854 158.577C72.5225 156.185 72.9375 153.377 73.2305 150.154C73.8652 143.953 74.1826 135.042 74.1826 123.421Z" fill="#CC9428"/>
+				</g>
+				<defs>
+				<filter id="filter0_d_0_1" x="0.740829" y="0" width="114.518" height="97.5463" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+				<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+				<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+				<feOffset dy="4"/>
+				<feGaussianBlur stdDeviation="2"/>
+				<feComposite in2="hardAlpha" operator="out"/>
+				<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+				<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_0_1"/>
+				<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_0_1" result="shape"/>
+				</filter>
+				<filter id="filter1_d_0_1" x="17.1553" y="54.9395" width="81.8281" height="120.061" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+				<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+				<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+				<feOffset dy="4"/>
+				<feGaussianBlur stdDeviation="2"/>
+				<feComposite in2="hardAlpha" operator="out"/>
+				<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+				<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_0_1"/>
+				<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_0_1" result="shape"/>
+				</filter>
+				</defs>
 		</svg>
 			<span class="text-xl font-bold sm:text-2xl">hewliyang</span>
 		</a>
 		<nav
 			id="navigation-menu"
-			class="absolute -inset-x-4 top-14 hidden flex-col items-end gap-y-4 rounded-md bg-[color:var(--theme-menu-bg)] py-4 text-accent shadow backdrop-blur group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:mt-1 sm:-ml-4 sm:flex sm:flex-row sm:items-center sm:divide-x sm:divide-dashed sm:divide-accent sm:rounded-none sm:bg-transparent sm:py-0 sm:shadow-none sm:backdrop-blur-none"
+			class="absolute -inset-x-4 top-14 hidden flex-col items-end gap-y-4 rounded-md bg-[color:var(--theme-menu-bg)] py-4 text-accent-2 shadow backdrop-blur group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:mt-1 sm:-ml-4 sm:flex sm:flex-row sm:items-center sm:rounded-none sm:bg-transparent sm:py-0 sm:shadow-none sm:backdrop-blur-none"
 			aria-label="Main menu"
 		>
 			{
 				menuLinks.map((link) => (
 					<a
 						href={link.path}
-						class="py-4 px-4 sm:py-0 sm:hover:underline rounded-lg hover:bg-gray-200 dark:hover-bg-gray-800 transition-all"
+						class="py-4 px-4 sm:py-0 sm:hover:underline rounded-lg hover:bg-gray-200 dark:hover:bg-gray-800 transition-all"
 						aria-current={url.pathname === link.path ? "page" : false}
 						rel="prefetch"
 					>
