--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -37,7 +37,7 @@ const {
 	<body>
 		<SkipLink />
 		<Header />
-		<main id="main" class="flex-1">
+		<main id="main" class="flex-1 text-sm">
 			<slot />
 		</main>
 		<Footer />
