--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -14,7 +14,7 @@ const { frontmatter, headings } = Astro.props;
 		<article>
 			<BlogHero content={frontmatter} />
 			<div
-				class="prose prose-sm prose-cactus mt-12 prose-headings:font-semibold prose-headings:before:absolute prose-headings:before:-ml-4 prose-headings:before:text-accent prose-headings:before:content-['#'] prose-th:before:content-none"
+				class="prose prose-base prose-cactus mt-12 prose-headings:font-semibold prose-headings:before:absolute prose-headings:before:-ml-4 prose-headings:before:text-accent prose-th:before:content-none"
 			>
 				<slot />
 			</div>
