--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,48 +1,153 @@
 ---
 import PageLayout from "@/layouts/Base";
 import { Image } from "@astrojs/image/components";
-import aboutImg from "../assets/about-astro.png";
-
+import profilePic from "../assets/profile-pic.png";
+import { Icon } from "astro-icon";
+ 
 const meta = {
 	title: "About",
-	description: "I'm a starter theme for Astro.build",
+	description: "Learn more about Li Yang",
 };
 ---
 
 <PageLayout meta={meta}>
-	<div class="space-y-6">
-		<h1 class="title">About</h1>
-		<p>
-			Hi, I’m a starter Astro. I’m particularly great for getting you started with your own blogging
-			website.
-		</p>
-		<div class="flex justify-center">
+
+	<section class="flex flex-col justify-center items-start max-w-2xl border-gray-200 dark:border-gray-700 mx-auto pb-16">
+		<div class="flex flex-col-reverse sm:flex-row items-start">
+			<div class="flex flex-col pr-8">
+			<h1 class="font-bold text-xl md:text-3xl tracking-tight mb-1 text-black dark:text-white">
+				Hew Li Yang
+			</h1>
+			<h2 class="text-gray-700 dark:text-gray-200 mb-4">
+				Penultimate Year Undergraduate at the{' '}
+				<span class="font-semibold">National University of Singapore</span>
+			</h2>
+			<p class="text-gray-600 dark:text-gray-400 mb-16">
+				Pursuing a major in{' '}
+				<span class="font-semibold text-gray-700 dark:text-gray-200">Data Science & Analytics</span>
+				and a minor in{' '} 
+				<span class="font-semibold text-gray-700 dark:text-gray-200">Computer Science</span>.
+				Big fan of learning and developing cool things.
+			</p>
+			</div>
+			<div class="w-[120px] sm:w-[178px] relative mb-8 sm:mb-0 mr-auto">
 			<Image
-				src={aboutImg}
-				alt="A cartoon cactus looking at the 'Astro.build' logo"
-				loading="eager"
+				alt="Hew Li Yang"
+				height={178}
+				width={178}
+				src={ profilePic }
+				format="webp"
+				class="rounded-3xl"
 			/>
+			</div>
 		</div>
-		<p>Here are my some of my awesome built in features:</p>
-		<ul class="list-inside list-disc">
-			<li>I'm ultra fast as I'm a static site</li>
-			<li>I'm fully responsive</li>
-			<li>I come with a light and dark mode</li>
-			<li>I'm easy to customise and add additional content</li>
-			<li>I have Tailwind CSS styling</li>
-			<li>Shiki code syntax highlighting</li>
-		</ul>
-		<p>
-			Clone or fork my
-			<a
-				class="cactus-link inline-block"
-				href="https://github.com/chrismwilliams/astro-cactus"
-				target="_blank"
-				rel="noopener noreferrer"
-				aria-label="github repository"
-			>
-				repo
-			</a> if you like me!
+
+		<h3 class="font-bold text-lg md:text-2xl tracking-tight mb-6 text-black dark:text-white">
+			Bio
+		</h3>
+		<p class="mb-4">
+			Hi! 👋 I'm Li Yang a <em class="font-bold">third year</em> undergraduate at the <em class="font-bold">National University of Singapore (NUS)</em>.
+			In addition to my major in Data Science & Analytics, I have also already completed a minor in Computer Science. 
+			My interests range widely from data visualisation to machine learning. In my free time, I <em>try</em>
+			to learn fullstack development to bring these concepts to life in the form of web applications.
 		</p>
-	</div>
+
+		<h3 class="font-bold text-lg md:text-2xl tracking-tight mb-6 text-black dark:text-white">
+			Skills
+		</h3>
+
+		<h4 class="font-semibold text-lg md:text-xl tracking-tight mb-3 text-black dark:text-white">
+			Languages
+		</h4>
+		<div class="flex flex-row space-x-3 mb-2">
+			<Icon name="logos:python" height={32} width={32}/>
+			<Icon name="logos:java" height={32} width={32}/>
+			<Icon name="logos:javascript" height={32} width={32}/>
+			<Icon name="logos:postgresql" height={32} width={32}/>
+			<Icon name="logos:html-5" height={32} width={32}/>
+			<Icon name="logos:css-3" height={32} width={32}/>
+			<Icon name="file-icons:latex" height={32} width={32}/>
+			<Icon name="vscode-icons:file-type-shell" height={32} width={32}/>
+			<Icon name="vscode-icons:file-type-rproj" height={32} width={32}/>
+		</div>
+
+		<h4 class="font-semibold text-lg md:text-xl tracking-tight mb-3 text-black dark:text-white">
+			Tools
+		</h4>
+
+		<div class="flex flex-row space-x-3 mb-2">
+			<Icon name="mdi:github" height={32} width={32}/>
+			<Icon name="logos:docker" height={32} width={72}/>
+		</div>
+
+		<h4 class="font-semibold text-lg md:text-xl tracking-tight mb-3 text-black dark:text-white">
+			Frameworks
+		</h4>
+
+		<div class="flex flex-row space-x-3 mb-8">
+			<Icon name="simple-icons:plotly" height={32} width={32}/>
+			<Icon name="simple-icons:fastapi" height={32} width={32}/>
+			<Icon name="simple-icons:flask" height={32} width={32}/>
+			<Icon name="simple-icons:streamlit" height={32} width={32}/>
+			<Icon name="logos:tensorflow" height={32} width={32}/>
+			<Icon name="logos:pytorch" height={32} width={32}/>
+			<Icon name="logos:react" height={32} width={32}/>
+		</div>
+
+
+
+
+
+
+		<div class="mb-8 leading-6">
+			<h3 class="font-bold text-lg md:text-2xl tracking-tight mb-6 text-black dark:text-white">
+				Links
+			</h3>
+
+			<ul>
+				<li>
+					Reddit: <a class="text-cyan-600 ml-2 hover:underline"href="https://www.reddit.com/user/hewliyang9">u/hewliyang9</a>
+				</li>
+				<li>
+					Twitter: <a class="text-cyan-600 ml-2 hover:underline" href="https://twitter.com/leeerob">@hewliyang_</a>
+				</li>
+				<li>
+					GitHub: <a class="text-cyan-600 ml-2 hover:underline" href="https://github.com/leerob">@hewliyang</a>
+				</li>
+				<li>
+					Website: <a class="text-cyan-600 ml-2 hover:underline" href="https://hewliyang.tech">https://hewliyang.tech</a>
+				</li>
+				<li>
+					LinkedIn:{' '}
+					<a class="text-cyan-600 ml-2 hover:underline" href="https://www.linkedin.com/in/hewliyang/">
+						https://www.linkedin.com/in/hewliyang
+					</a>
+				</li>
+			</ul>
+		  </div>
+
+		<h3 class="font-bold text-lg md:text-2xl tracking-tight mb-6 text-black dark:text-white">
+			This website
+		</h3>
+		<p>
+			This site was built with <em class="font-semibold">Astro</em> on top of the
+			<a class="text-cyan-600 hover:underline" href="https://github.com/chrismwilliams/astro-cactus" target="_blank">Cactus Theme</a>.
+			Hosting & CI/CD is handled by <em class="font-semibold">Vercel</em> and I got the domain name for free through the 
+			<em class="font-semibold">GitHub Education</em> scheme. Images are optimised using <code>@astrojs/image</code> to
+			<code>webp</code>. Blog posts are marked up from <code>.mdx</code> files. Some minor styling changes were made 
+			using <em class="font-semibold">TailwindCSS</em>. This about section is inspired by
+			<a class="text-cyan-600 hover:underline" href="https://leerob.io">leerob.io</a>.
+
+
+
+
+		</p>
+
+
+
+
+
+
+
+	</section>
 </PageLayout>
