--- a/src/pages/shorts.astro
+++ b/src/pages/shorts.astro
@@ -22,7 +22,7 @@ import pruViz from "../assets/pru-viz.png";
         />
 
         <p class="mb-3">
-            Interested in the actual data? Check out my blog post <a href="/posts" target="_blank" class="font-bold text-cyan-500">here</a>.
+            Interested in the actual data? Check out my blog post <a href="/posts/fast-food" target="_blank" class="font-bold text-cyan-500">here</a>.
             Discuss at <a href="https://www.reddit.com/r/malaysia/comments/zxd3mx/fast_food_outlets_counts_end_2022/" target="_blank" class="font-bold text-red-500">r/Malaysia</a>
         </p>
         
