--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -67,24 +67,7 @@
 		fill="none"
 		xmlns="http://www.w3.org/2000/svg"
 	>
-		<path
-			d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18Z"
-			stroke="currentColor"
-			stroke-linecap="round"
-			stroke-linejoin="round"></path>
-		<path d="M22 12L23 12" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-		></path>
-		<path d="M12 2V1" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
-		<path d="M12 23V22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
-		<path d="M20 20L19 19" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-		></path>
-		<path d="M20 4L19 5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-		></path>
-		<path d="M4 20L5 19" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-		></path>
-		<path d="M4 4L5 5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
-		<path d="M1 12L2 12" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-		></path>
+	<path stroke-linecap="round" stroke="currentColor" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
 	</svg>
 	<svg
 		id="moon-svg"
@@ -96,24 +79,6 @@
 		fill="none"
 		xmlns="http://www.w3.org/2000/svg"
 	>
-		<circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.5"></circle>
-		<path
-			d="M7.63262 3.06689C8.98567 3.35733 9.99999 4.56025 9.99999 6.00007C9.99999 7.65693 8.65685 9.00007 6.99999 9.00007C5.4512 9.00007 4.17653 7.82641 4.01685 6.31997"
-			stroke="currentColor"
-			stroke-width="1.5"></path>
-		<path
-			d="M22 13.0505C21.3647 12.4022 20.4793 12 19.5 12C17.567 12 16 13.567 16 15.5C16 17.2632 17.3039 18.7219 19 18.9646"
-			stroke="currentColor"
-			stroke-width="1.5"></path>
-		<path
-			d="M14.5 8.51L14.51 8.49889"
-			stroke="currentColor"
-			stroke-linecap="round"
-			stroke-linejoin="round"></path>
-		<path
-			d="M10 17C11.1046 17 12 16.1046 12 15C12 13.8954 11.1046 13 10 13C8.89543 13 8 13.8954 8 15C8 16.1046 8.89543 17 10 17Z"
-			stroke="currentColor"
-			stroke-linecap="round"
-			stroke-linejoin="round"></path>
+	<path stroke-linecap="round" stroke="currentColor" stroke-linejoin="round" d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z" />
 	</svg>
 </button>
