Finalise blog posts

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -76,7 +76,7 @@ const meta = {
 			Tools
 		</h4>
 
-		<div class="flex flex-row space-x-3 mb-2">
+		<div class="flex flex-wrap gap-4 mb-2">
 			<Icon name="mdi:github" height={32} width={32}/>
 			<Icon name="logos:docker" height={32} width={72}/>
 		</div>
@@ -85,7 +85,7 @@ const meta = {
 			Frameworks
 		</h4>
 
-		<div class="flex flex-row space-x-3 mb-8">
+		<div class="flex flex-wrap gap-4 mb-8">
 			<Icon name="simple-icons:plotly" height={32} width={32}/>
 			<Icon name="simple-icons:fastapi" height={32} width={32}/>
 			<Icon name="simple-icons:flask" height={32} width={32}/>
