--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
-		<h1 class="title mb-6">Hello there!</h1>
+		<h1 class="title mb-6">Hello there 👋</h1>
 		<p class="mb-4 text-lg">
 			I’m Li Yang, a penultimate year <b>Data Science</b> undergraduate at the <b>National University of Singapore</b>. 
 			I enjoy building data-driven applications of all kinds using the latest and greatest frameworks. My recent interests are in
