Add teaching to footer

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -25,5 +25,8 @@ const year = new Date().getFullYear();
 		<a href="/shorts" class="px-4 py-2 sm:py-0 sm:px-2 sm:hover:text-textColor sm:hover:underline"
 			>Shorts</a
 		>
+		<a href="https://www.comp.nus.edu.sg/~e0407886/" class="px-4 py-2 sm:py-0 sm:px-2 sm:hover:text-textColor sm:hover:underline"
+			>Teaching</a
+		>
 	</nav>
 </footer>
