--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -5,14 +5,14 @@ const year = new Date().getFullYear();
 <footer
 	class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pt-20 pb-4 text-center align-top text-gray-500 sm:flex-row sm:justify-between sm:text-xs"
 >
-	<div class="mr-0 sm:mr-4">
+	<div class="mr-0 sm:mr-4 text-sm">
 		Copyright &copy; {year}
 		<span aria-label="rocket emoji">🚀</span>
 		hewliyang
 	</div>
 	<nav
 		aria-label="More on this site"
-		class="flex gap-x-2 sm:gap-x-0 sm:divide-x sm:divide-gray-500"
+		class="flex sm:gap-x-0 sm:divide-x sm:divide-gray-500 text-xs"
 	>
 		<a href="/" class="px-4 py-2 sm:py-0 sm:px-2 sm:hover:text-textColor sm:hover:underline">Home</a
 		>
