--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -105,10 +105,10 @@ const meta = {
 					Reddit: <a class="text-cyan-600 ml-2 hover:underline"href="https://www.reddit.com/user/hewliyang9">u/hewliyang9</a>
 				</li>
 				<li>
-					Twitter: <a class="text-cyan-600 ml-2 hover:underline" href="https://twitter.com/leeerob">@hewliyang_</a>
+					Twitter: <a class="text-cyan-600 ml-2 hover:underline" href="https://twitter.com/hewliyang_">@hewliyang_</a>
 				</li>
 				<li>
-					GitHub: <a class="text-cyan-600 ml-2 hover:underline" href="https://github.com/leerob">@hewliyang</a>
+					GitHub: <a class="text-cyan-600 ml-2 hover:underline" href="https://github.com/hewliyang">@hewliyang</a>
 				</li>
 				<li>
 					Website: <a class="text-cyan-600 ml-2 hover:underline" href="https://hewliyang.tech">https://hewliyang.tech</a>
