Update currently working on:

--- a/src/pages/shorts.astro
+++ b/src/pages/shorts.astro
@@ -14,6 +14,9 @@ import nusSentiment from "../assets/nus-sentiment.png";
 			This section contains snippets from my latest work that I think are entertaining and/or eye-catching!
 		</p>
         
+        <h3 class="title text-lg mb-1">I'm currently working on <a class="text-cyan-500 underline hover:text-red-500" href="https://nus-betternextbus.vercel.app">NUS BetterNextBUS</a></h3>
+        <p class="text-sm font font-semibold mb-3">A perfomant alternative to NUS's inhouse NextBus mobile app to help students & staff get their bus routes & timings faster!</p>
+
         <h3 class="title text-lg mb-3">Fast Food Chain Locations</h3>
         <Image 
             src={fastfoodGif}
