clean up navbar

--- a/src/pages/shorts.astro
+++ b/src/pages/shorts.astro
@@ -1,10 +1,14 @@
 ---
+
+// media imports
 import PageLayout from "@/layouts/Base";
-import { Image } from "@astrojs/image/components";
 import fastfoodGif from "../assets/fast-food.gif";
 import pruViz from "../assets/pru-viz.png";
 import nusSentiment from "../assets/nus-sentiment.png";
 import nusBetterNextBus from "../assets/nnbus.gif";
+
+// component imports
+import { Image } from "@astrojs/image/components";
 
 ---
 
