--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -39,14 +39,14 @@ const menuLinks = [
 	});
 </script>
 
-<header id="main-header" class="group relative mb-14 flex items-center sm:pl-[4.5rem]">
+<header id="main-header" class="group relative mb-14 flex items-center">
 	<div class="flex sm:flex-col">
 		<a
 			href="/"
-			class="inline-flex items-center grayscale hover:filter-none sm:relative sm:inline-block"
+			class="inline-flex items-center hover:filter-none sm:relative sm:inline-block"
 			aria-current={url.pathname === "/" ? "page" : false}
 		>
-		<svg
+		<!-- <svg
 		class="mr-3 h-10 w-6 sm:absolute sm:left-[-4.5rem] sm:mr-0 sm:h-20 sm:w-12"
 		aria-hidden="true"
 		focusable="false"
@@ -83,12 +83,14 @@ const menuLinks = [
 				<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_0_1" result="shape"/>
 				</filter>
 				</defs>
-		</svg>
-			<span class="text-xl font-bold sm:text-2xl">hewliyang</span>
+		</svg> -->
+			<span class="text-xl font-bold sm:text-2xl bg-gradient-to-r from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text mb-3">
+				hewliyang
+			</span>
 		</a>
 		<nav
 			id="navigation-menu"
-			class="absolute -inset-x-4 top-14 hidden flex-col items-end gap-y-4 rounded-md bg-[color:var(--theme-menu-bg)] py-4 text-accent-2 shadow backdrop-blur group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:mt-1 sm:-ml-4 sm:flex sm:flex-row sm:items-center sm:rounded-3xl sm:bg-transparent sm:py-0 sm:shadow-none sm:backdrop-blur-none"
+			class="absolute -inset-x-4 top-14 hidden flex-col items-end gap-y-4 rounded-md bg-[color:var(--theme-menu-bg)] py-4 text-accent-2 shadow backdrop-blur group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:mt-1 sm:-ml-4 sm:flex sm:flex-row sm:items-center sm:rounded-xl sm:bg-slate-200 dark:sm:bg-slate-900 sm:p-1 sm:shadow-none sm:backdrop-blur-none"
 			aria-label="Main menu"
 		>
 			{
