--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -6,6 +6,9 @@ import Footer from "@/components/layout/Footer";
 import SkipLink from "@/components/SkipLink";
 import siteConfig from "@/site-config";
 
+// import font
+import '@fontsource/inter';
+
 interface Props {
 	meta: SiteMeta;
 }
