feat: active link highlighting in navbar

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -59,7 +59,7 @@ const menuLinks = [
 				menuLinks.map((link) => (
 					<a
 						href={link.path}
-						class="py-4 px-4 sm:py-0 sm:hover:underline rounded-lg hover:bg-gray-200 dark:hover:bg-gray-800 transition-all"
+						class={`py-4 px-4 sm:py-0 sm:hover:underline rounded-lg hover:bg-gray-200 dark:hover:bg-gray-800 transition-all ${url.pathname === link.path ? "bg-gray-100 dark:bg-gray-700" : ""}`}
 						aria-current={url.pathname === link.path ? "page" : false}
 						rel="prefetch"
 					>
