[chore] bun & umami

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -36,6 +36,13 @@ const {
 				colorThemeMetaTag.setAttribute("content", siteConfig.themeColorLight);
 			}
 		</script>
+		<!-- analytics -->
+		<script 
+			async 
+			is:inline 
+			src="https://umami.hewliyang.tech/script.js" 
+			data-website-id="7d5d7c0f-d6a8-4126-9015-6f5c5e167452" 
+		/>
 	</head>
 	<body>
 		<SkipLink />
